[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{name = "(Henry Scott)", email = "henry.scott@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest"]

[project.urls]
Home = "https://github.com/hrscott/hw4-prim-mst"
